--- a/index.html
+++ b/index.html
@@ -448,6 +448,13 @@
 </tr>
 
 <tr>
+<td>Achewood</td>
+<td>2001</td>
+<td>Darkhorse</td>
+<td><a href="Achewood/Achewood.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action Comics</td>
 <td>1938</td>
 <td>DC</td>
