--- a/FourColor/FourColor.html
+++ b/FourColor/FourColor.html
@@ -10,19 +10,8 @@
 <body>
 Four Color Comics<br>
 <img src="FourColor1939series001.jpg"> <br>
-Series: 25 issues 1938 to 1942 series. 1354 issues 1942 to 1962 series. <br>
-Publisher: Dell<br>
+25 issues from 1938 to 1942, 1354 issues from 1942 to 1962 by Dell
 <p>
-Four Color, also known as Four Color Comics and One Shots, was an American comic book anthology series published by Dell Comics between 1938 and 1968. The title is a reference to the four basic colors used when printing comic books (cyan, magenta, yellow and black at the time).
-</p><p>
-This series reprints newpaper comic strips, different series per issue. Early issues have "Four Color Comic" on the cover. Last with this notation is #101. The following issues were published as Gyro Gearloose (1962 series): 1217, 1228, 1277, 1292, 1314-1327, 1329. There are ad and non-ad versions for many issues from #693 to the end.
-</p><p>
-More than 1,000 issues were published, usually with multiple titles released every month. An exact accounting of the actual number of unique issues produced is difficult because occasional issue numbers were skipped and a number of reprint issues were also included. Nonetheless, the Overstreet Comic Book Price Guide lists well over 1,000 individual issues, ending with #1354. 
-</p><p>
-It currently holds the record for most issues produced of an American comic book. Its nearest rivals, DC's Action Comics and Detective Comics, are nearing 1,000 issues. The first 25 issues are known as "series 1"; after they were published, the numbering began again and "series 2" began. Four Color published many of the first comics featuring characters licensed from Walt Disney.
-</p><p>
-Identifying Four Color comics can be a challenge, as only issues published between 1940 and 1946 actually carried the title Four Color Comics on the cover.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -113,8 +102,16 @@ Identifying Four Color comics can be a challenge, as only issues published betwe
 <li><a href="FourColor1939series023.html">Four Color #23</a> Gang Busters</li>
 <li><a href="FourColor1939series024.html">Four Color #24</a> Captain Easy</li>
 <li><a href="FourColor1939series025.html">Four Color #25</a> Popeye</li>
-</ul>
-
+</p><p>
+Four Color, also known as Four Color Comics and One Shots, was an American comic book anthology series published by Dell Comics between 1938 and 1968. The title is a reference to the four basic colors used when printing comic books (cyan, magenta, yellow and black at the time).
+</p><p>
+This series reprints newpaper comic strips, different series per issue. Early issues have "Four Color Comic" on the cover. Last with this notation is #101. The following issues were published as Gyro Gearloose (1962 series): 1217, 1228, 1277, 1292, 1314-1327, 1329. There are ad and non-ad versions for many issues from #693 to the end.
+</p><p>
+More than 1,000 issues were published, usually with multiple titles released every month. An exact accounting of the actual number of unique issues produced is difficult because occasional issue numbers were skipped and a number of reprint issues were also included. Nonetheless, the Overstreet Comic Book Price Guide lists well over 1,000 individual issues, ending with #1354. 
+</p><p>
+It currently holds the record for most issues produced of an American comic book. Its nearest rivals, DC's Action Comics and Detective Comics, are nearing 1,000 issues. The first 25 issues are known as "series 1"; after they were published, the numbering began again and "series 2" began. Four Color published many of the first comics featuring characters licensed from Walt Disney.
+</p><p>
+Identifying Four Color comics can be a challenge, as only issues published between 1940 and 1946 actually carried the title Four Color Comics on the cover.
 </p><p>
 1942 Series 2:<ul>
 <li><a href="FourColor001.html">Four Color #1</a> Little Joe</li>
