--- a/index.html
+++ b/index.html
@@ -4786,6 +4786,13 @@
 </tr>
 
 <tr>
+<td>Donald Duck</td>
+<td>1932</td>
+<td>Disney</td>
+<td><a href="DonaldDuck/DonaldDuck.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Doom</td>
 <td>2000</td>
 <td>Marvel</td>
@@ -9480,7 +9487,7 @@
 </tr>
 
 <tr>
-<td>MickeyMouse</td>
+<td>Mickey Mouse</td>
 <td>1928</td>
 <td>Disney</td>
 <td><a href="MickeyMouse/MickeyMouse.html">Details</a></td>
@@ -11882,14 +11889,21 @@
 <td>1973</td>
 <td>Skywald</td>
 <td><a href="Scream/Scream.html">Details</a></td>
-</tr></p><p>
+</tr>
 
 <tr>
 <td>Scribbly</td>
 <td>1948</td>
 <td>DC</td>
 <td><a href="Scribbly/Scribbly.html">Details</a></td>
-</tr></p><p>
+</tr>
+
+<tr>
+<td>Scrooge McDuck</td>
+<td>1948</td>
+<td>Disney</td>
+<td><a href="ScroogeMcDuck/ScroogeMcDuck.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Secret</td>
@@ -13877,6 +13891,13 @@
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="XmenTeenTitans/xmenteentitans.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uncle Scrooge</td>
+<td>1952</td>
+<td>Disney</td>
+<td><a href="UncleScrooge/UncleScrooge.html">Details</a></td>
 </tr>
 
 <tr>
