--- a/index.html
+++ b/index.html
@@ -10908,6 +10908,13 @@
 </tr>
 
 <tr>
+<td>Planetary</td>
+<td>1999</td>
+<td>DC</td>
+<td><a href="Planetary/Planetary.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Plasmer</td>
 <td>1994</td>
 <td>Marvel</td>
