--- a/index.html
+++ b/index.html
@@ -6281,6 +6281,13 @@
 </tr>
 
 <tr>
+<td>Goofy</td>
+<td>1932</td>
+<td>Disney</td>
+<td><a href="Goofy/Goofy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Goon</td>
 <td>2003</td>
 <td>Dark Horse</td>
