--- a/Ultimates/Ultimates.html
+++ b/Ultimates/Ultimates.html
@@ -8,11 +8,39 @@
 </head>
 
 <body>
-<img src="Ultimates.jpg"> <br>
-Series: 13 issues 2002 -2004<br>
-Publisher: Marvel<br>
+<img src="Ultimates1.jpg"> <br>
+13 issues from 2002 -2004, 13 issues 2005 - 2007 (as Ultimates 2), 5 issues 2007 - 2008 (as Ultimates 3), 31 issues from 2011 - 2013, 12 issues in 2016 by Marvel<br>
 <p>
-The Ultimates is a thirteen-issue comic book limited series written by Mark Millar with art by Bryan Hitch. The series introduces the superhero team the Ultimates and was published by the Ultimate Marvel imprint of Marvel Comics.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Ultimates1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ultimates16.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The Ultimates series introduces the superhero team the Ultimates and was published by the Ultimate Marvel imprint of Marvel Comics.
 </p><p>
 General Nick Fury of the international peacekeeping agency S.H.I.E.L.D. establishes a strike force of government-sponsored superheroes when the President of the United States approves a new defense budget to combat the growing risk of the U.S. being attacked by supervillains. 
 </p><p>
