--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 <tr>
 <td>Achewood</td>
 <td>2001</td>
-<td>Darkhorse</td>
+<td>Dark Horse</td>
 <td><a href="Achewood/Achewood.html">Details</a></td>
 </tr>
 
@@ -9872,10 +9872,10 @@
 </tr>
 
 <tr>
-<td>Muppet Show</td>
-<td>1974</td>
-<td>Jim Henson Company</td>
-<td><a href="MuppetShow/MuppetShow.html">Details</a></td>
+<td>Multiversity</td>
+<td>2014</td>
+<td>DC</td>
+<td><a href="Multiversity/Multiversity.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9886,10 +9886,17 @@
 </tr>
 
 <tr>
-<td>Multiversity</td>
-<td>2014</td>
-<td>DC</td>
-<td><a href="Multiversity/Multiversity.html">Details</a></td>
+<td>Muppet Show</td>
+<td>1974</td>
+<td>Jim Henson Company</td>
+<td><a href="MuppetShow/MuppetShow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Murder Falcon</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="MurderFalcon/MurderFalcon.html">Details</a></td>
 </tr>
 
 <tr>
