--- a/index.html
+++ b/index.html
@@ -5833,6 +5833,13 @@
 </tr>
 
 <tr>
+<td>Fu Jitsu</td>
+<td>2017</td>
+<td>AfterShock</td>
+<td><a href="FuJitsu/FuJitsu.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fun Home</td>
 <td>2006</td>
 <td>Houghton Mifflin</td>
