--- a/index.html
+++ b/index.html
@@ -378,6 +378,13 @@
 </tr>
 
 <tr>
+<td>Abominable Charles Christopher</td>
+<td>2010</td>
+<td>TXcomics</td>
+<td><a href="AbominableCharlesChristopher/AbominableCharlesChristopher.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Absolute Vertigo</td>
 <td>1995</td>
 <td>Vertigo</td>
