--- a/AbominableCharlesChristopher/AbominableCharlesChristopher.html
+++ b/AbominableCharlesChristopher/AbominableCharlesChristopher.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="AbominableCharlesChristopher1.jpg"> <br>
-1 issue in 2010 by TXcomics
+1 issue in 2010 by TXcomics <a href="https://abominable.cc/">abominable.cc</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
