--- a/index.html
+++ b/index.html
@@ -11941,6 +11941,13 @@
 </tr>
 
 <tr>
+<td>Sea Devils</td>
+<td>1961</td>
+<td>DC</td>
+<td><a href="SeaDevils/SeaDevils.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret</td>
 <td>2007</td>
 <td>Dark Horse</td>
