--- a/index.html
+++ b/index.html
@@ -462,6 +462,13 @@
 </tr>
 
 <tr>
+<td>Acme Novelty Library</td>
+<td>1993</td>
+<td>Fantagraphics</td>
+<td><a href="AcmeNoveltyLibrary/AcmeNoveltyLibrary.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action Comics</td>
 <td>1938</td>
 <td>DC</td>
