--- a/index.html
+++ b/index.html
@@ -5426,6 +5426,13 @@
 </tr>
 
 <tr>
+<td>Fade Out</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="FadeOut/FadeOut.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fafhrd and the Gray Mouser</td>
 <td>1990</td>
 <td>Marvel</td>
