--- a/index.html
+++ b/index.html
@@ -6532,6 +6532,13 @@
 </tr>
 
 <tr>
+<td>Habibi</td>
+<td>2011</td>
+<td>Pantheon</td>
+<td><a href="Habibi/Habibi.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Halo</td>
 <td>2001</td>
 <td>Microsoft Studios</td>
