--- a/index.html
+++ b/index.html
@@ -2048,6 +2048,13 @@
 </tr>
 
 <tr>
+<td>Batgirl</td>
+<td>2000</td>
+<td>DC</td>
+<td><a href="Batgirl/Batgirl.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman</td>
 <td>1939</td>
 <td>DC</td>
