--- a/index.html
+++ b/index.html
@@ -5650,6 +5650,13 @@
 </tr>
 
 <tr>
+<td>Flash</td>
+<td>1940</td>
+<td>All American</td>
+<td><a href="Flash/Flash.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Flash Gordon</td>
 <td>1934</td>
 <td>King Features</td>
