--- a/index.html
+++ b/index.html
@@ -1612,6 +1612,13 @@
 </tr>
 
 <tr>
+<td>Aquaman</td>
+<td>1962</td>
+<td>DC</td>
+<td><a href="Aquaman/Aquaman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arana The Heart of the Spider</td>
 <td>2005</td>
 <td>Marvel</td>
