--- a/index.html
+++ b/index.html
@@ -10817,6 +10817,13 @@
 </tr>
 
 <tr>
+<td>Parker</td>
+<td>2009</td>
+<td>IDW</td>
+<td><a href="Parker/Parker.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Paste Pot Pete</td>
 <td>1963</td>
 <td>Marvel</td>
