--- a/index.html
+++ b/index.html
@@ -10691,6 +10691,13 @@
 </tr>
 
 <tr>
+<td>Orion</td>
+<td>2000</td>
+<td>DC</td>
+<td><a href="Orion2000/Orion2000.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Other Lives</td>
 <td>2010</td>
 <td>Vertigo</td>
