--- a/index.html
+++ b/index.html
@@ -5601,6 +5601,13 @@
 </tr>
 
 <tr>
+<td>Fearscape</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="Fearscape/Fearscape.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Feature Books</td>
 <td>1937</td>
 <td>David McKay</td>
