--- a/index.html
+++ b/index.html
@@ -13467,6 +13467,13 @@
 </tr>
 
 <tr>
+<td>Teen Titans</td>
+<td>1966</td>
+<td>DC</td>
+<td><a href="TeenTitans/TeenTitans.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Teenage Mutant Ninja Turtles</td>
 <td>1984</td>
 <td>Mirage</td>
