--- a/index.html
+++ b/index.html
@@ -13194,6 +13194,13 @@
 </tr>
 
 <tr>
+<td>Stumptown</td>
+<td>2009</td>
+<td>Oni Press</td>
+<td><a href="Stumptown/Stumptown.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sub-Mariner</td>
 <td>1968</td>
 <td>Marvel</td>
