--- a/index.html
+++ b/index.html
@@ -2504,6 +2504,13 @@
 </tr>
 
 <tr>
+<td>Black Magick</td>
+<td>2015</td>
+<td>Image</td>
+<td><a href="BlackMagick/BlackMagick.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Monday Murders</td>
 <td>2016</td>
 <td>Image</td>
@@ -6348,6 +6355,13 @@
 <td>2003</td>
 <td>Dark Horse</td>
 <td><a href="Goon/Goon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gotham Academy</td>
+<td>2015</td>
+<td>DC</td>
+<td><a href="GothamAcademy/GothamAcademy.html">Details</a></td>
 </tr>
 
 <tr>
