--- a/index.html
+++ b/index.html
@@ -2426,6 +2426,13 @@
 </tr>
 
 <tr>
+<td>Bitch Planet</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="BitchPlanet/BitchPlanet.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bite Club</td>
 <td>2004</td>
 <td>Vertigo</td>
@@ -2536,6 +2543,13 @@
 <td>1948</td>
 <td>Atlas</td>
 <td><a href="AllWinners/AllWinners.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Science</td>
+<td>2013</td>
+<td>Image</td>
+<td><a href="BlackScience/BlackScience.html">Details</a></td>
 </tr>
 
 <tr>
