--- a/Wizzywig/Wizzywig.html
+++ b/Wizzywig/Wizzywig.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Wizzywig1.jpg"> <br>
-
+1 issues, 288 pages by Top Shelf
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -36,6 +36,11 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+Wizzywig is a 2011 American comic book series by Ed Piskor. It deals with Kevin "Boingthump" Phenicle, a young prodigy who becomes fascinated with social engineering, phone phreaking, and eventually computer hacking. As the series progresses, Kevin grows as well as his trials and tribulations with hacking. His endeavours make him legendary; his abilities are feared and also revered by many.
+</p><p>
+The main character from the series, Kevin, is a composite of many well known phreaks and hackers such as Kevin Mitnick, Kevin Poulsen, Joybubbles, and many others. It began as a series of self-published books, was serialized online, and is now a graphic novel handsomely packaged with a Mac Classic cover and Apple-fied Top Shelf logo. 
+</p><p>
+In fractured, single-page strips and longer, stretched-out scenes, Boingthump begins as a clever adolescent in the ’70s with a knack for tinkering just below the surface of legality and an insatiable curiosity for new technology (he’s more that lost breed of dissidence, the phone phreaker, than the sort of hacker we associate with the term today). Without much malicious intent, though, he winds up on the FBI’s hit list, goes into hiding when a hysterical Geraldo type whips the public into a fear frenzy, and inspires a backlash among underground figures waging a battle for digital freedom.
 </p>
 </body>
 </html>
