--- a/index.html
+++ b/index.html
@@ -14847,6 +14847,13 @@
 </tr>
 
 <tr>
+<td>Wizzywig</td>
+<td>2011</td>
+<td>Top Shelf</td>
+<td><a href="Wizzywig/Wizzywig.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wolf and Red</td>
 <td>1995</td>
 <td>Dark Horse</td>
