--- a/Wizzywig/Wizzywig.html
+++ b/Wizzywig/Wizzywig.html
@@ -31,6 +31,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Wizzywig10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Wizzywig11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Wizzywig12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Wizzywig13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
