--- a/index.html
+++ b/index.html
@@ -12053,6 +12053,13 @@
 </tr>
 
 <tr>
+<td>Seconds</td>
+<td>2014</td>
+<td>Random House</td>
+<td><a href="Seconds/Seconds.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret</td>
 <td>2007</td>
 <td>Dark Horse</td>
