--- a/index.html
+++ b/index.html
@@ -6407,6 +6407,13 @@
 </tr>
 
 <tr>
+<td>Grayson</td>
+<td>2017</td>
+<td>DC</td>
+<td><a href="Grayson/Grayson.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Great Lakes Avengers</td>
 <td>2005</td>
 <td>Marvel</td>
@@ -13229,7 +13236,7 @@
 </tr>
 
 <tr>
-<td>Strikeforce: Morituri</td>
+<td>Strikeforce Morituri</td>
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="StrikeforceMorituri/StrikeforceMorituri.html">Details</a></td>
