--- a/index.html
+++ b/index.html
@@ -10915,6 +10915,13 @@
 </tr>
 
 <tr>
+<td>Paying For It</td>
+<td>2011</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="PayingForIt/PayingForIt.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pendragon</td>
 <td>1990</td>
 <td>Marvel</td>
