--- a/index.html
+++ b/index.html
@@ -8850,6 +8850,13 @@
 </tr>
 
 <tr>
+<td>Manhattan Projects</td>
+<td>2012</td>
+<td>Image</td>
+<td><a href="ManhattanProjects/ManhattanProjects.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Many Ghosts of Doctor Graves</td>
 <td>1967</td>
 <td>Charlton</td>
@@ -13912,6 +13919,13 @@
 <td>1987</td>
 <td>Dark Horse</td>
 <td><a href="Trekker/Trekker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trinity: A Graphic History of the First Atomic Bomb</td>
+<td>2012</td>
+<td>Farrar, Straus, and Giroux</td>
+<td><a href="Trinity/Trinity.html">Details</a></td>
 </tr>
 
 <tr>
