--- a/index.html
+++ b/index.html
@@ -5615,6 +5615,13 @@
 </tr>
 
 <tr>
+<td>Fatale</td>
+<td>2012</td>
+<td>Image</td>
+<td><a href="Fatale/Fatale.html">Details</a></td>
+</tr>
+
+<tr>
 <td>FBP: Federal Bureau of Physics</td>
 <td>2013</td>
 <td>Vertigo</td>
