--- a/index.html
+++ b/index.html
@@ -2252,6 +2252,13 @@
 </tr>
 
 <tr>
+<td>Benjamin Constant</td>
+<td>1845</td>
+<td>Creator</td>
+<td><a href="BenjaminConstant/BenjaminConstant.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beowulf</td>
 <td>975</td>
 <td>England</td>
@@ -6180,6 +6187,13 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="GeorgeCarlin/GeorgeCarlin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Georges Clairin</td>
+<td>1843</td>
+<td>Creator</td>
+<td><a href="GeorgesClairin/GeorgesClairin.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11735,6 +11749,13 @@
 <td>1943</td>
 <td>Creator</td>
 <td><a href="RobertCrumb/RobertCrumb.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rolf Armstrong</td>
+<td>1889</td>
+<td>Creator</td>
+<td><a href="RolfArmstrong/RolfArmstrong.html">Details</a></td>
 </tr>
 
 <tr>
