--- a/index.html
+++ b/index.html
@@ -3210,6 +3210,13 @@
 </tr>
 
 <tr>
+<td>Casimir Lee</td>
+<td>1990?</td>
+<td>Creator</td>
+<td><a href="CasimirLee/CasimirLee.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Casey, Crime Photographer</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -11472,6 +11479,13 @@
 </tr>
 
 <tr>
+<td>Rebecca Yanovskaya</td>
+<td>1990?</td>
+<td>Creator</td>
+<td><a href="RebeccaYanovskaya/RebeccaYanovskaya.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Dwarf</td>
 <td>1988</td>
 <td>BBC</td>
@@ -15117,6 +15131,13 @@
 <td>1895</td>
 <td>Howard, Ainslee &amp; Co.</td>
 <td><a href="YellowKid/YellowKid.html">Details</a><br></td>
+</tr>
+
+<tr>
+<td>Yoann Lossel</td>
+<td>1985</td>
+<td>Creator</td>
+<td><a href="YoannLossel/YoannLossel.html">Details</a></td>
 </tr>
 
 <tr>
