--- a/index.html
+++ b/index.html
@@ -13348,6 +13348,13 @@
 </tr>
 
 <tr>
+<td>Suicide Squad</td>
+<td>1987</td>
+<td>DC</td>
+<td><a href="SuicideSquad/SuicideSquad.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Suiciders</td>
 <td>2015</td>
 <td>Vertigo</td>
