--- a/index.html
+++ b/index.html
@@ -7492,6 +7492,13 @@
 </tr>
 
 <tr>
+<td>Injustice</td>
+<td>2013</td>
+<td>DC</td>
+<td><a href="Injustice/Injustice.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Instant Piano</td>
 <td>1994</td>
 <td>Dark Horse</td>
