--- a/index.html
+++ b/index.html
@@ -3749,6 +3749,13 @@
 </tr>
 
 <tr>
+<td>Copra</td>
+<td>2012</td>
+<td>Copra Press</td>
+<td><a href="Copra/Copra.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cops: The Job</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -8427,6 +8434,13 @@
 <td>1993</td>
 <td>Epic</td>
 <td><a href="Lawdog/Lawdog.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lazarus</td>
+<td>2013</td>
+<td>Image</td>
+<td><a href="Lazarus/Lazarus.html">Details</a></td>
 </tr>
 
 <tr>
