--- a/index.html
+++ b/index.html
@@ -6435,6 +6435,13 @@
 </tr>
 
 <tr>
+<td>Gorgo</td>
+<td>1960</td>
+<td>Carlton</td>
+<td><a href="Gorgo/Gorgo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gotham Academy</td>
 <td>2015</td>
 <td>DC</td>
