--- a/index.html
+++ b/index.html
@@ -4281,6 +4281,13 @@
 </tr>
 
 <tr>
+<td>Dark Mysteries</td>
+<td>1951</td>
+<td>Master Comics</td>
+<td><a href="DarkMysteries/DarkMysteries.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Night: A True Batman Story</td>
 <td>2017</td>
 <td>Vertigo</td>
