--- a/Gorgo/Gorgo.html
+++ b/Gorgo/Gorgo.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Gorgo1.jpg"> <br>
-
+23 issues from 1961 - 1965 by Charlton
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
