--- a/index.html
+++ b/index.html
@@ -9753,6 +9753,13 @@
 </tr>
 
 <tr>
+<td>Midnighter</td>
+<td>2007</td>
+<td>DC</td>
+<td><a href="Midnighter/Midnighter.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mighty Avengers</td>
 <td>2007</td>
 <td>Marvel</td>
