--- a/SouthernCross/SouthernCross.html
+++ b/SouthernCross/SouthernCross.html
@@ -33,6 +33,7 @@
 <div class="mySlides" style="text-align: center;"><img src="SouthernCross12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SouthernCross13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SouthernCross14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SouthernCross15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
