--- a/index.html
+++ b/index.html
@@ -4554,6 +4554,13 @@
 </tr>
 
 <tr>
+<td>Deathstroke</td>
+<td>1991</td>
+<td>DC</td>
+<td><a href="Deathstroke/Deathstroke.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Defenders of Dynatron City</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -5761,6 +5768,12 @@
 <td><a href="FlashRebirth/FlashRebirth.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Flex Mentallo</td>
+<td>1996</td>
+<td>DC</td>
+<td><a href="FlexMentallo/FlexMentallo.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Flight of Angels</td>
