--- a/index.html
+++ b/index.html
@@ -7294,6 +7294,13 @@
 </tr>
 
 <tr>
+<td>Ice Cream Man</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="IceCreamMan/IceCreamMan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Iceman</td>
 <td>1984</td>
 <td>Marvel</td>
