--- a/index.html
+++ b/index.html
@@ -4484,6 +4484,13 @@
 </tr>
 
 <tr>
+<td>Deadpool</td>
+<td>1993</td>
+<td>Marvel</td>
+<td><a href="Deadpool/Deadpool.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadpool and the Mercs for Money</td>
 <td>2016</td>
 <td>Marvel</td>
