--- a/FifthBeatle/FifthBeatle.html
+++ b/FifthBeatle/FifthBeatle.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Fifth Beatle</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Fifth Beatle: The Brian Epstein Story</title>
 </head>
 
 <body>
-<h2>Fifth Beatle: The Brian Epstein Story</h2>
 <img src="FifthBeatle.jpg"> <br>
-Series: 2013 Graphic Novel<br>
-Publisher: Dark Horse<br>
+1 issue in 2013 by Dark Horse
 <p>
-Written by Vivek J. Tiwary<br>
-Illustrations by Andrew Robinson and Kyle Baker
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FifthBeatle5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
+Written by Vivek J. Tiwary with illustrations by Andrew Robinson and Kyle Baker. 
 The Fifth Beatle is the untold true story of Brian Epstein, the visionary manager who discovered and guided the Beatles to unprecedented international stardom, yet died painfully lonely at the young age of thirty-two.
 </p><p>
 More than merely the story of "The Man Who Made the Beatles," The Fifth Beatle is an uplifting, tragic, and ultimately inspirational human story about the desire to leave behind a legacy, amidst the struggle to overcome crushing personal obstacles and insurmountable odds! 
