--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <img src="kb.jpg" title="Creativity" style="float: left" hspace="10">
-<b>Creativity</b><br>
+<b>Media</b><br>
 <a href="revenue.html">Media Franchises</a><br>
 <a href="MediaCompanies.html">Media Companies</a>
 
@@ -17,7 +17,7 @@
 <tr>
 <th>Title</th>
 <th>Year</th>
-<th>Publisher</th>
+<th>Producer</th>
 <th>Details</th>
 </tr>
 </thead>
@@ -3613,6 +3613,13 @@
 <td>1994</td>
 <td>Vertigo</td>
 <td><a href="MrPunch/MrPunch.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Book History Of Comics</td>
+<td>2016</td>
+<td>IDW</td>
+<td><a href="ComicBookHistoryOfComics/ComicBookHistoryOfComics.html">Details</a></td>
 </tr>
 
 <tr>
