--- a/index.html
+++ b/index.html
@@ -11005,6 +11005,13 @@
 </tr>
 
 <tr>
+<td>Pandemica</td>
+<td>2019</td>
+<td>IDW</td>
+<td><a href="Pandemica/Pandemica.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pantheon Books</td>
 <td>1942</td>
 <td>Publisher</td>
