--- a/GulliversTravels/GulliversTravels.html
+++ b/GulliversTravels/GulliversTravels.html
@@ -11,6 +11,23 @@
 <img src="GulliversTravels1.jpg"> <br>
 1726 Jonathan Swift
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="GulliversTravels1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GulliversTravels2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GulliversTravels3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GulliversTravels4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Gulliver's Travels, or Travels into Several Remote Nations of the World. In Four Parts. By Lemuel Gulliver, First a Surgeon, and then a Captain of Several Ships (which is the full title), is a prose satire by Irish writer and clergyman Jonathan Swift, that is both a satire on human nature and the "travellers' tales" literary subgenre. 
 </p><p>
 It is Swift's best known full-length work, and a classic of English literature. He himself claimed that he wrote Gulliver's Travels "to vex the world rather than divert it".
