--- a/index.html
+++ b/index.html
@@ -15385,6 +15385,13 @@
 </tr>
 
 <tr>
+<td>Zero Zero</td>
+<td>1995</td>
+<td>Fantagraphics</td>
+<td><a href="ZeroZero/ZeroZero.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ziggy Pig-Silly Seal</td>
 <td>1944</td>
 <td>Marvel</td>
