--- a/MickeyMouse/MickeyMouse.html
+++ b/MickeyMouse/MickeyMouse.html
@@ -31,6 +31,8 @@ Publisher: Disney 1928<br>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse8.jpg" title="The Band Concert"></div>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse9.jpg" title="Thru the Mirror"></div>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse10.jpg" title="The End"></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse11.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse12.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
