--- a/index.html
+++ b/index.html
@@ -1971,6 +1971,13 @@
 </tr>
 
 <tr>
+<td>Bandette</td>
+<td>2013</td>
+<td>Monkeybrain</td>
+<td><a href="Bandette/Bandette.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bang Tango</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -2759,6 +2766,13 @@
 <td>1983</td>
 <td>PC</td>
 <td><a href="BoldAdventure/BoldAdventure.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bolt</td>
+<td>2008</td>
+<td>Disney</td>
+<td><a href="Bolt/Bolt.html">Details</a></td>
 </tr>
 
 <tr>
