--- a/index.html
+++ b/index.html
@@ -7953,6 +7953,13 @@
 </tr>
 
 <tr>
+<td>John Kenn Mortensen</td>
+<td>1978</td>
+<td>Creator</td>
+<td><a href="JohnKennMortensen/JohnKennMortensen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joker Comics</td>
 <td>1941</td>
 <td>Atlas</td>
