--- a/JohnKennMortensen/JohnKennMortensen.html
+++ b/JohnKennMortensen/JohnKennMortensen.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Mortensen1.jpg"> <br>
+<img src="Mortensen.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -31,10 +31,21 @@
 <div class="mySlides" style="text-align: center;"><img src="Mortensen10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mortensen11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mortensen12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mortensen21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+John Kenn Mortensen's pen is full of wonderfully creepy monsters which crawl onto sticky yellow note pads when darkness falls. Sticky Monsters collects some of the best monster drawings in a delectable hardback edition.
 </p><p>
 John Kenn Mortensen was born in 1978. He is a Danish artist who lives and works in Copenhagen. Mortensen is a master with pen and paper and his imagination is second to none. During the day, he employs these skills as an animator and director of children’s television programmes. But when darkness falls, he lets his imagination run wild, and from the nib of his pen flows a host of monsters, ghosts and ghouls, terrifying enough to give those who are faint of heart cause to double check that their doors are locked at night.
 </p>
