--- a/index.html
+++ b/index.html
@@ -13298,6 +13298,13 @@
 </tr>
 
 <tr>
+<td>Sticky Monsters</td>
+<td>2014</td>
+<td>Random House UK</td>
+<td><a href="JohnKennMortensen/JohnKennMortensen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stoker's Dracula</td>
 <td>2004</td>
 <td>Marvel</td>
