--- a/index.html
+++ b/index.html
@@ -10011,6 +10011,13 @@
 </tr>
 
 <tr>
+<td>Monstress</td>
+<td>2015</td>
+<td>Image</td>
+<td><a href="Monstress/Monstress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monty Python</td>
 <td>1969</td>
 <td>BBC</td>
@@ -14408,6 +14415,13 @@
 <td>1982</td>
 <td>Vertigo</td>
 <td><a href="VForVendetta/VForVendetta.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valerian</td>
+<td>1967</td>
+<td>Pilote</td>
+<td><a href="Valerian/Valerian.html">Details</a></td>
 </tr>
 
 <tr>
