--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Creativity</title>
+<title>Media</title>
 <link rel="stylesheet" href="ZimStyles.css">
 </head>
 <body>
@@ -2437,6 +2437,13 @@
 <td>2002</td>
 <td>Alternative Comics</td>
 <td><a href="Bipolar/Bipolar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Birds of Prey</td>
+<td>1999</td>
+<td>DC</td>
+<td><a href="BirdsOfPrey/BirdsOfPrey.html">Details</a></td>
 </tr>
 
 <tr>
