--- a/index.html
+++ b/index.html
@@ -13550,6 +13550,13 @@
 </tr>
 
 <tr>
+<td>Superannuated Man</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="SuperannuatedMan/SuperannuatedMan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Superman</td>
 <td>1933</td>
 <td>DC</td>
@@ -15018,6 +15025,13 @@
 <td>1990</td>
 <td>Epic</td>
 <td><a href="WildCards/WildCards.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wild Storm</td>
+<td>2017</td>
+<td>DC</td>
+<td><a href="WildStorm/WildStorm.html">Details</a></td>
 </tr>
 
 <tr>
