--- a/index.html
+++ b/index.html
@@ -15455,6 +15455,13 @@
 </tr>
 
 <tr>
+<td>Zero</td>
+<td>2013</td>
+<td>Image</td>
+<td><a href="Zero/Zero.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Zero Killer</td>
 <td>2007</td>
 <td>Dark Horse</td>
