--- a/index.html
+++ b/index.html
@@ -11751,6 +11751,13 @@
 </tr>
 
 <tr>
+<td>Return Of The Dapper Men</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="ReturnOfTheDapperMen/ReturnOfTheDapperMen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Return to Perdition</td>
 <td>2013</td>
 <td>Vertigo</td>
