--- a/index.html
+++ b/index.html
@@ -5206,6 +5206,13 @@
 </tr>
 
 <tr>
+<td>Eddie Campbell's Bacchus</td>
+<td>1995</td>
+<td>Eddie Campbell Comics</td>
+<td><a href="EddieCampbellsBacchus/EddieCampbellsBacchus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eden's Trail</td>
 <td>2005</td>
 <td>Marvel</td>
