--- a/Nighthawk/Nighthawk.html
+++ b/Nighthawk/Nighthawk.html
@@ -2,15 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title> Nighthawk </title>
 </head>
 
 <body>
 <img src="Nighthawk1.jpg"> <br>
-Series: 3 issues 1998<br>
-Publisher: Marvel<br>
+3 issues in 1998, 6 issues 2016, 1 (Hate Makes Hate TPB) in 2017 by Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nighthawk12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Nighthawk is the name of several fictional characters appearing in American comic books published by Marvel Comics. There have been six versions of the character: a supervillain-turned-superhero from the mainstream Marvel Universe continuity, Kyle Richmond, who belonged to the team Squadron Sinister; and five from alternate universes, who belonged to various permutations of the team Squadron Supreme.
 </p><p>
 Kyle Richmond, the original Nighthawk, debuted as a supervillain in the final panel of The Avengers #69 (Oct. 1969), a superhero team book. This story is the first chapter of a three-issue story arc by writer Roy Thomas and penciller Sal Buscema. The arc introduced the supervillain team the Squadron Sinister, whose four members were loosely based on heroes in DC Comics' Justice League of America, with Nighthawk based on Batman.
