--- a/index.html
+++ b/index.html
@@ -4512,6 +4512,13 @@
 </tr>
 
 <tr>
+<td>Deadly Class</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="DeadlyClass/DeadlyClass.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadman</td>
 <td>1985</td>
 <td>DC</td>
